--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -1,4 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11709017.md#1" target="_blank">周晓辉：邓炳强进京听令 北京对港政策仍两难</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11709017.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912070028101538-600x400-1-150x120.jpg" align ="left"></a>邓炳强北京之行透露的信息，表明中南海对港政策仍处于两难中：暴力镇压乃至动武，承担不起后果；顺应港人民意，心有不甘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:33 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708945.md#1" target="_blank">杨宁：甘肃镇原图书馆焚书背后的恐怖</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708945.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/252481_medium-150x120.jpg" align ="left"></a>只是焚书又焚人的中共，最终的下场与纳粹会有两样吗？答案是否定的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 1:30 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708345.md#1" target="_blank">袁斌：央视造假港警“熬夜吃盒饭”与自焚伪案</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708345.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/04/5041632101123-150x120.jpg" align ="left"></a>中共央视不但是造假惯犯，而且造假水平一向也很下三滥。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 6:48 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708119.md#1" target="_blank">洪微：北约加入川普应对中共新冷战</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708119.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/000_1JC5GW-150x120.jpg" align ="left"></a>北约70年庆典，刚刚在英国伦敦落幕，北约的《伦敦宣言》，有一段，专门提到了应对中共的挑战，在北约70年历史上，尚属首次。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:17 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708082.md#1" target="_blank">洪达：发送台历遭关押 中共畏惧真善忍</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1905181950481973-150x120.jpg" align ="left"></a>据明慧网报导，北京市法轮功学员贾凤芝，二零一九年十一月九日在平谷区东高村免费发放精美真相台历时，被警察绑架、非法关押在平谷区看守所，她的住所和老家均被非法搜查并录像，因为检察院要补充（构陷）材料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:20 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708009.md#1" target="_blank">严晓：也谈洗脑</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/42019-06-24.05-150x120.jpg" align ="left"></a>“洗脑”本是极权体制的专利，最近我却发现，中共媒体和其代言人竟也拿着它向香港青少年挥舞，说是他们之所以成为民主自由斗士，是被外来反动势力洗了脑。这倒让我在惊诧之余，有了跟他们理论一番的兴趣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11707812.md#1" target="_blank">【名家专栏】弹劾“专家组”没告诉你这些事</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11707812.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/scholars-at-impeachment-hearing-1200x814-150x120.jpg" align ="left"></a>这篇短文做了美国众议院司法委员会（House Judiciary Committee）的“专家证人”小组应该做却没能做到的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:55 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8_1233928_2e56d62d8b907cf5d5b2fd3d9f96bc3c-600x400-150x120.jpg" align ="left"></a>受其连累，他在外交部当医生的二儿子，在中国医学科学院工作的四儿子，也都被打成“右派”，最小的儿子则被安上了“组织反革命”罪，被劳动改造。李康年精神和身体受到了双重打击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:46 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706176.md#1" target="_blank">王友群：海外“侨领”应以黄克锵为戒</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706176.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/chnzw100517003-150x120.jpg" align ="left"></a>纽约是海外法轮功学员人数最多的一个城市。在纽约许多著名的景点，如时代广场等，到处可见法轮功学员讲真相的身影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706958.md#1" target="_blank">海风：亲共华人是“爱国”还是在“害国”？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/IMG_3902-copy-600x400-150x120.jpg" align ="left"></a>离台湾大选还不到40天，又有两亲共人士被台湾法院判刑入狱。从各大媒体上可以看到，从去年以来，几乎每天都有中共间谍或中共代理人在各国被捕的报导。在这其中，有些人居然还不知道自己的行为是在犯罪，直到警察亮出证据才明白自己“中招”了。澳洲一位亲共华侨因涉嫌一起政治献金案被捕后，他还理直气壮地问记者，难道我爱国也犯罪吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706930.md#1" target="_blank">王友群：“香港人权法”有助香港国际地位</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15db602cd78fca64_ttl7daykzf_86c475e41a499-150x120.jpg" align ="left"></a>11月27日，美国总统川普签署《香港人权与民主法案》。中共立即炸了锅，“强烈抗议”、“坚决反对”等都跑出来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:43 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706878.md#1" target="_blank">胡少江：北京在香港遭遇滑铁卢之后</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706878.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/3019-11-2210.50-150x120.jpg" align ="left"></a>中央和香港特区两级政府在香港区议会的选举中输得很难看！从表面上看在选举中输掉的仅仅是建制派在区议会的多数席位，但是这次选举本质上是一次香港的草根民主派与北京操纵的建制派的对垒，他们之间的输赢绝对不仅仅是候选人个人的问题，而是他们所代表的政治主张的胜败。这次选举实际是一次全民公投，即是对中央政府对香港政策的一次公投，是对.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:22 PM			</td></tr>
@@ -13,19 +22,13 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706285.md#1" target="_blank">颜丹：总理发话能解决农民工被欠薪问题？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-12-150x120.jpg" align ="left"></a>企业公然赖账，政府常年监而不管，谁都不难想到，这里面肯定有事，这背后的水肯定很深。归根结底，肯定跟政府脱不了干系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706171.md#1" target="_blank">王友群：解体中共的重大事件接连发生</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706171.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1307132120352039-150x120.jpg" align ="left"></a>近日，美国的中国问题专家、宾夕法尼亚大学教授林蔚在接受英文《大纪元时报》专访时披露，一个习近平身边的高层幕僚告知，中共内部承认正在走向解体。事实确实如此。目前，中共正面临有史以来最大的全面危机，解体中共的重大事件，正以高频率接连发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 2:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/14042606040520-600x400-150x120.jpg" align ="left"></a>大陆一位政府机关公务员讲述自己修炼大法后身心得到净化的体悟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:32 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704872.md#1" target="_blank">覃永沛律师被批捕 中共侵犯人权新罪证</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/03-98-600x400-150x120.jpg" align ="left"></a>覃永沛的妻子邓晓云表示，他做的事情是正确的，因为影响到一些人当官发财了，所以他们（当局）就压制他，“他做好人，有错吗？政府不帮，他来帮，就惹来这种灾祸。株连九族，没有人权人性可言。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705122.md#1" target="_blank">王行：中共的监控与我看到的宇宙监控</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705122.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1052877582-150x120.jpg" align ="left"></a>目前世界上监控系统最发达，最普遍，几乎无处不在的是邪教中共对中国人的监控，什么“电子眼录像”、“步态识别”、“人脸识别、“情绪识别”，监控电脑，监听电话，监控彩信、短信或微信、微博，银行卡、身份证等信息。无论是机器监控还是人工监控，几乎都是无孔不入的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:54 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704968.md#1" target="_blank">【思想领袖】中共内部承认正走向解体（二）</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Interview-150x120.jpg" align ="left"></a>英文《大纪元时报》资深记者杨杰凯（Jan Jekielek）近日在“美国思想领袖”节目中，对美国的中国问题专家、宾夕法尼亚大学国际关系和中国历史教授林蔚（亚瑟?沃尔德伦，Arthur Waldron）进行了专访。全文翻译如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:36 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704884.md#1" target="_blank">狙击689：华为251事件和香港反修例运动</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704884.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/19-12-045-150x120.jpg" align ="left"></a>这几天网络上沸沸扬扬都是华为251事件，华为员工李洪元举报上司虚报营业额而遭上面报复“劝退”。当他跟人事部门谈好离职条件并签妥文件后，竟被华为控告勒索而拘留了251天，最后因他在跟华为人事部门会话时为保护自己，偷藏录音笔纪录了会话内容才被释放，并获发出《国家赔偿决定书》赔偿10万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:15 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704767.md#1" target="_blank">洪微：川普新一轮关税又箭在弦上</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704767.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MU0OC-600x400-1-150x120.jpg" align ="left"></a>距离12月15日越来越近，美中贸易第一阶段协议，没有明显的签署迹象。美国商务部长罗斯最近表示，如果没有协议，针对1560亿美元中国进口商品的15%关税，将在12月15日如期实施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:47 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704636.md#1" target="_blank">李铭：中共酷刑灭绝人性 无法撼动正信</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704636.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/g-1-600x400-150x120.jpg" align ="left"></a>中共一贯以种种酷刑，对非法关押的法轮功学员进行所谓“转化”，配合精神迫害，妄图让法轮功学员放弃修炼，写下放弃信仰、出卖灵魂的所谓“三书”（保证书、决裂书、揭批书）。近期媒体披露的两则报导，印证了中共迫害法轮功的残酷严峻，尽显其灭绝人性的本质，细节让人不忍卒读。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:16 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703766.md#1" target="_blank">袁斌：港警结婚麻烦多与港警形象的崩塌</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703766.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1911120304312188-600x400-150x120.jpg" align ="left"></a>阿梅是位反送中女示威者，芳龄28岁，与男友交往8年，两人原拟定明年二月大婚。如今场地订了、婚戒也准备好了，但因为男友是警察，亲友现在都反对她结婚，原本答应当首席伴娘的闺密也考虑缺席，以致婚礼可能无法如期举行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 12:37 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704357.md#1" target="_blank">徐行：南加大麻之争成了华人之间的较量</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704357.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5091DA09-E75C-44E7-97A5-3DEEEEBC11A1-150x120.png" align ="left"></a>2016年大选，加州选民公投通过了允许娱乐大麻合法化的64号提案，让加州成为美西第一个“娱乐大麻”合法州。加州对大麻的态度一直很友善，1996年即合法开放“医用大麻”，当时也是开了全美首例。
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708330.md#1" target="_blank">廖祖笙：或为白卷先生习近平</a><br></h3>习近平先生，“法治国家”的法治环境和人权环境，杂草丛生、荒芜鹿戏久矣，这不仅常让国人觉得这是个非人间，而且也严重损害“新政”的执政形象和政绩。“人之生乎地上之无几何也，譬之犹驷驰而过隙也”，若你在任期内不能尽快找到有效的突破口，那么御任之时，你或为白卷先生习近平，国人所能记住你的好，无非也就两件事，一是解救了海量的被劳.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:07 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708236.md#1" target="_blank">文武：向心孟晚舟看似倒楣 实则幸运</a><br></h3>孟晚舟在加拿大被抓，至今已有一年的时间了，向心是最近被台湾抓住的。从一般常识而言，谁被抓了都是件倒楣的事情，可是在今天这个特殊的历史时期，对于一些特殊的人来说，被抓了，不仅不是倒楣的事情反而是件幸运的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:57 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11707892.md#1" target="_blank">戈壁东：中共威胁要对美国搞恐袭？</a><br></h3>12月4日有一个惊人新闻来自中共官方发言人华春莹，在提到美国众议院12月3日通过的新疆人权法案的时候，为了把新疆的大规模集中营与反恐扯在一起，华春莹特别提到美国遭遇的911恐怖袭击，她的说法是“殷鉴不远，不要好了伤疤忘了痛”。
 
-然而，开放大麻真的是个好主意吗？一场华人与华人之间的大麻攻防战意外地在南加小镇悄然展开。
-
-众所周知，尽管美国号称民族.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:43 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703604.md#1" target="_blank">周晓辉：制裁陈全国并非是中共最恐惧的</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703604.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c8b2d43435d7e659d22cbd2b5255e892-600x400-2-150x120.jpg" align ="left"></a>最近中共可是手忙脚乱。刚刚怒斥美国总统川普（特朗普）签署了《香港人权与民主法案》，并以胆怯可笑的方式“制裁”了一把美国，中共又不得不面对美国众议院于12月3日通过的《2019年维吾尔人权政策法案》这一情况。不出意外，中共媒体再次跳脚，以极度癫狂的状态抨击美国，似乎觉得自己的歇斯底里可以改变什么。殊不知，除了让世界看笑话.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:46 AM			</td></tr>
+同一日，针对美国总统特朗普上月底签署《香港人权与民主法案》，CCTV中文网又在脸书上贴.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 11:37 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11707614.md#1" target="_blank">宁静：刘三姐到底是“歌仙”还是红卫兵？</a><br></h3>看过电影《刘三姐》的，一定会被影片一开始的画面所吸引，只见青山绿水间，小舟正在清澈见底的河面上捕鱼，鱼鸥在水面翻腾往来，把鱼送给船头站立着的老翁，这时美丽的歌声从远处顺着江水传来，远远望去，一位美丽的姑娘如同天仙一样飘来，你的心中会自然而然的生出一念，这是神仙来了吗？她就是歌神刘三姐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11707550.md#1" target="_blank">张林：贸易战中美经济对比天壤之别</a><br></h3>美国劳工部周五称，11月份全国增加了266,000个工作岗位，这个增长速度，仅次于今年1月份312,000个工作岗位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706853.md#1" target="_blank">理悟：贺美总统签署香港法案后各国跟进立法</a><br></h3>一花引来百花开，寒梅傲雪报春来。
 冰融霜消残冬尽，万紫千红看精彩。
 四面楚歌乌江泪，共产遗梦七十载。
@@ -36,17 +39,5 @@
 共产天堂原是幻，马教破产本邪说；
 毛贼不保红崽福，空向灵堂哭奈何。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/22/n11674937.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（7）</a><br></h3>西方哲学单个概念的获取方式造成了一些基本的哲学争论，如主观与客观、认识与被认识、主体与客体、精神与物质、实体与形而上等等一元论和二元论的争论，或者是一元论中哪个更基本的争论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:50 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704921.md#1" target="_blank">启明：共产党注定灭亡</a><br></h3>世界上只有不信神的人，没有不信神的民族。人性是本善的，人是可贵的万物之灵，是神所看护的生命，而共产党这个东西它是反传统反神迷恋暴力的，所以它只能找那些反传统不信神的人附体，这必定会遭到正常人的反感和反对。制造仇恨崇尚暴力发动暴乱制造恐怖是它在世间立足的手段，以此来恐吓善良的人们对它们予以姑息和纵容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:50 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705085.md#1" target="_blank">廖祖笙：饿饭党治下的饿饭国</a><br></h3>习近平先生，你也一定知道，你现在担任党魁的这个党，过去是个饿饭党，在未得江山之前，因为饥肠辘辘，常忽悠国民上街闹事，大张旗鼓“反饥饿反迫害”，直闹得国民政府鸡犬不宁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11705046.md#1" target="_blank">陈达：广州主干道塌陷中共填坑埋人意味着什么</a><br></h3>泡沫崛起道似平，
-马龙车水忙不停。
-突如其张地狱口，
-飞奔车马骤失踪。
-人之死活浑不管，
-草草填坑急匆匆。
-三人两车速明埋，
-一条黑路照通行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704965.md#1" target="_blank">宁静：《花为媒》被中共禁播十五年只为淫乱华夏</a><br></h3>在我眼里，《花为媒》不过是一台美丽的民俗小喜剧，节日婚嫁等民俗活动时，敲打起来开心消遣的热闹剧，内容既不牵涉神佛，更不触及政治，这么一出表面看来深度有限的小剧，在1963年被拍成了电影，因为演员个个都是演技一流的艺术家，电影拍的非常好看好听，可根本没有公映就被枪毙了，一禁就是十五年，这是为什么呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:57 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704826.md#1" target="_blank">严晓：奴才式的歹毒</a><br></h3>当我看到郑若骅语带嘲讽地回答记者关于郑文杰遭大陆警方刑求的问题曰：“他可以去向内地警方投诉。”时，我情不自禁想起了中国老话：“最毒妇人心！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
