--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -31,7 +31,13 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714758.md#1" target="_blank">加拿大国会特别委员会成立 审查加中关系</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5df0543ec6c22-150x120.jpg" align ="left"></a>联邦保守党外交评论员、众议员奥图尔（Erin O'Toole）周二（12月10日）呼吁特鲁多政府拿出实质行动来处理加中关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716194.md#1" target="_blank">P2P倒了领导先跑 中国金融反腐藏特权</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716194.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/0cfc7f1dfaca21a50d3e63edb3e4984a-150x120.jpg" align ="left"></a>中国官员腐败花招多，并反映热门时事。中共中央纪检委10日发布公告，金融领域官员除了收受贿赂，还利用职务之便，在清理网贷（P2P借贷）等案件上“特权挽损”，让自己先抽身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715875.md#1" target="_blank">解除民主派议员陈淑庄职务动议被否决</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-06_11-46-05-150x120.jpg" align ="left"></a>香港区议会选举后，建制派对民主派“动手”。今天（12月11日），建制派立法会议员在大会上动议，解除民主派陈淑庄、邵家臻的议员职务。但因建制派只有40席，投票时，未能达到三分之二的要求，故此动议被否决。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715977.md#1" target="_blank">台外长：若中共武力介入香港 台湾愿助港人</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715977.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MH2CN-150x120.jpg" align ="left"></a>台湾外交部长吴钊燮周二（12月10日）表示，台湾支持香港人民的自由与民主，如果中共以武力介入香港，镇压抗议者，台湾将会与国际社会一道帮助港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717137.md#1" target="_blank">辽宁抚顺石油二厂突发大火 火光冲天</a><br></h3>12月11日晚，辽宁省抚顺市搭连桥东侧抚顺石油二厂突发大火。失火原因不明。
+
+中共央视新闻披露，11日21时50分左右，该石油工厂着火，现场浓烟滚滚火光冲天。一直到12日凌晨1时左右，大火才被扑灭。
+
+消息指，起火地点是厂区内一条油沟，起火原因仍在调查中。事故未造成人员伤亡。
+
+网传视频显示，现场亮如白昼，浓烟直冲上天。现场有市民表示，今年又废了.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11715794.md#1" target="_blank">台旅行社勾结人头协会 5千陆公务员非法来台</a><br></h3>?国安恐再现漏洞？台北地检署指出，新北市水资源经济发展协会等12个机构，涉嫌勾结20余家非甲种旅行社业者，假造短期专业交流文件，协助5千名中国公务人员及其亲友来台，但实际目的尚在调查中；刑事局今日（11日）兵分5路搜索，并约谈相关10人，预计晚间移送复讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
